update the test cases